--- a/week12/SungLee-Week12.Rmd
+++ b/week12/SungLee-Week12.Rmd
@@ -24,5 +24,17 @@ theme: paper
 
 ## Introduction  
 
+The purpose of this assignment is to report on a recommender system. 
+
+
+1. Perform a Scenario Design analysis as described below.  Consider whether it makes sense for your selected recommender system to perform scenario design twice, once for the organization (e.g. Amazon.com) and once for the organization's customers.  
+
+    * Who are your target users?
+    * What are their key goals?
+    * How can you help them accomplish those goals?
+
+2. Attempt to reverse engineer what you can about the site, from the site interface and any available information that you can find on the Internet or elsewhere. 
+3. Include specific recommendations about how to improve the site's recommendation capabilities going forward. 
+4. Create your report using an R Markdown file, and create a discussion thread with a link to the GitHub repo where your Markdown file notebook resides.  You are not expected to need to write code for this discussion assignment.
 
 
