--- a/week12/SungLee-Week12.Rmd
+++ b/week12/SungLee-Week12.Rmd
@@ -38,3 +38,35 @@ The purpose of this assignment is to report on a recommender system.
 4. Create your report using an R Markdown file, and create a discussion thread with a link to the GitHub repo where your Markdown file notebook resides.  You are not expected to need to write code for this discussion assignment.
 
 
+## I. Scenario Analysis
+
+The recommender system I am looking at is the Google News feed. On my Android phone, I have a news feed that is populated with stories that have been curated by Google. More about the recommender is here: https://www.independent.co.uk/life-style/gadgets-and-tech/news/google-news-headlines-stories-ranking-algorithm-editors-publishers-journalism-a8404811.html 
+
+The target users are anyone who has a Google account, notably a Gmail account or an organization that uses GSuite. The search activity, Android activity (such as opening a particular application), and places the person has been are recorded by the phone. In general, anyone who interacts with the Google ecosystem has their activity recorded in some shape or form.
+
+The key goals of Google would be to drive advertising and search traffic. Google earns revenue for its AdSense and other services for advertising. 
+
+
+## II. Reverse Engineer
+
+The Google news feed is an app on any Android device. It looks like the app is fed information Google already has on me. By visiting myactivity.google.com with the Gmail account I use to login, my activity lists the items/subjects I have searched for, places I have been and searched for on Google maps, and subjects/topics gleaned from my emails are in the system. 
+
+An example of email being gleaned for information would be when my flight reservations are sent to my email, Google will automatically update my Google calendar with the flight number, time, and destination. As the time for my flight approaches, I will receive news feed articles about the destination I am visiting. On a recent reservation to visit Switzerland before Covid-19, I was receiving news articles about the top 10 things to do in Switzerland and other related news articles.
+
+## III. How to improve?
+
+Though the pervasiveness of Google monitoring activity, it allows users to opt out of having their email looked through and activity on myactivity.google.com can be deleted. Also, not everyone uses Gmail or Gsuite. Users can use Office365 or Apple's iphones for services. 
+
+A possible way to improve would be to gather data from ISPs for customers in the United States and other countries. Because every user or potential customer has to use a telecom to get on the internet, quickly inspect the network traffic for non-Google-device signatures and see where they are going. In addition, look at competitors' search traffic to identify ways to develop new business ventures.
+
+
+
+## Conclusion
+
+
+
+
+
+
+
+
